@@ -1,3 +1,7 @@
+2013-09-13  Vanessa Gil <vanessa.gil@artica.es>
+
+	* include/functions_crm.php: Fixed bug in company search.
+
 2013-09-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/functions_incidents.php: Improved the function
